@@ -1,3 +1,3 @@
 MAJOR=2016
-MINOR=6
+MINOR=8
 BUILD=0
